revert back to 12

--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -2,8 +2,10 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "type": "module",
     "dev": "next dev --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
