--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "dev": "next dev --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -25,10 +25,14 @@
     "zod": "^3.25.17"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.36.0",
+    "@next/eslint-plugin-next": "^15.5.4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react-dom": "19.0.3",
+    "eslint": "^8.57.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
